# REMOTE_PC

./: CMakeLists.txt  README.md  README_VI.md  main.cpp
backend/core/: AudioLoopbackCapture.cpp  AudioLoopbackCapture.h  ClipboardManager.cpp  ClipboardManager.h  ConnectionManager.cpp  ConnectionManager.h  NetworkManager.cpp  NetworkManager.h  ScreenRenderer.cpp  ScreenRenderer.h  SystemTray.cpp  SystemTray.h
backend/network/: Packet.h  PacketStream.cpp  PacketStream.h  Protocol.h  RemoteClient.cpp  RemoteClient.h  RemoteServer.cpp  RemoteServer.h
qml/: Control.qml  Home.qml
qml/components/: Toast.qml
